--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am Firmannafiri, Freddy, isreal Manupassa, but call me freddy for short i am aspire to be web and app developer who wants to make the interent a user-friendly space for all ages and people who browse and use the internet or apps alike.
+      <p>Welcome to my website. I am Firmannafiri, Freddy, isreal Manupassa, but call me Freddy for short i am aspire to be web and app developer who wants to make the interent a user-friendly space for all ages and people who browse and use the internet or apps alike.
         This website self is to test and show my abilities as a web developer, but to be truthfull a lot was taken from stack overflow and thank you <a class="_blank" href="w3schools.com">W3schools.com</a> For there existence since that helped a <strong>lot</strong>.
-          Some more facts about me is. . . I am developing a game called Phantasmic fate which you can follow more about at <a class="_blank" href="https://asobuts.wordpress.com/"><strong>My blog</strong></a>, The game is about a ghost and or phantom which traveses the ever changing area 
+          Some more facts about me is. . . I am developing a game called Phantasmic fate which you can follow more about at  <a class="_blank" href="https://asobuts.wordpress.com/"><strong>My blog</strong></a>, The game is about a ghost and or phantom which traveses the ever changing area 
           , the area themselves changing by due time. The game lets you see it from another perspective, but about that at<a class="_blank" href="https://asobuts.wordpress.com/"><strong>My blog</strong></a>. For those who know what a MBTI is i am INTJ-A and my enneagram is 5w6.
       </p>
     </div>
@@ -138,7 +138,7 @@ body, html {
     Projects Done
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">1.000.00.000</span><br>
+    <span class="w3-xlarge">1.000.000.000</span><br>
     Happy Viewers
   </div>
   <div class="w3-quarter w3-section">
@@ -161,11 +161,11 @@ body, html {
   <div class="ProjectList">
   <ol>
     <li><a href="asobuts.wordpress.com">phantasmic-fate</a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
+    <li><a href="">WIP</a></li>
+    <li><a href="">WIP</a></li>
+    <li><a href="">WIP</a></li>
+    <li><a href="">WIP</a></li>
+    <li><a href="">WIP</a></li>
   </ol>
 </div>
 
